fix(responsive): now the page have fixed dimension and responsive, aligned text

--- a/style.css
+++ b/style.css
@@ -1,101 +1,77 @@
-@media screen and (color) {
-    :root {
-        max-width: max-content;
-        max-width: fit-content;
-          }
-}
-
 .container {
-    display: flex;
-    background-color:lightgrey;
-    height: 100vh;
-    width: 100vw;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
-    flex-direction: column;
+  display: flex;
+  background-color: lightgrey;
+  height: 90vh;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
 }
 
 #other-box {
-    display: flex;
-    height: 100vh;
-    width: 100%;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: wrap;
-    flex-direction: column;
-    background-color:whitesmoke;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-direction: column;
+  background-color: whitesmoke;
 }
 
 .storyline {
-    display: flex;
-    font-family: sans-serif;
-    font-size: 30px;
-    color: black;
-    justify-content: center;
-    align-content: center;
-    
+  font-family: sans-serif;
+  font-size: 30px;
+  color: black;
+  text-align: center;
 }
 
 #main {
-    display: flex;
-    justify-content: center;
-    align-content: center;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
 }
 
 #title {
-    display: flex;
-    font-family: sans-serif;
-    color: black;
-    max-width: auto;
-    font-size: 35px;
-    justify-content: center;
-    align-content: center;
-    margin-top: 1%;
+  font-family: sans-serif;
+  color: black;
+  font-size: 35px;
+  margin-top: 1%;
+  text-align: center;
 }
 
 #subtitle {
-    display: flex;
-    font-family: sans-serif;
-    color: black;
-    font-size: 20px;
-    align-content: center;
-    justify-content: center;
+  font-family: sans-serif;
+  color: black;
+  font-size: 20px;
+  text-align: center;
 }
-    
 
 #main-img {
-    display: flex;
-    height: auto;
-    max-width: 100%;
+  display: flex;
+  height: auto;
+  max-width: 100%;
 }
 
 #img-caption {
-    display: flex;
-    font-family: sans-serif;
-    font-size: 15px;
-    max-width: auto;;
-    justify-content: center;
-    align-content: center;
+  font-family: sans-serif;
+  font-size: 15px;
 }
 
 #list {
-    display: block;
-    list-style-position: inside;
-    font-family: sans-serif;
-    font-size: 1.2em;
-    line-height: 2.55em;
-    justify-content: center;
-    align-content: center;
-  }
+  list-style-type: none;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  line-height: 2.55em;
+}
 
-  #tribute-link {
-    display: flex;
-    font-family: sans-serif;
-    max-width: auto;
-    font-size: 18px;
-    color: black;
-    justify-content: center;
-    align-content: center;
-    flex-wrap: nowrap;
+#list > li {
+  text-align: center;
+}
+
+#tribute-link {
+  font-family: sans-serif;
+  font-size: 18px;
+  color: black;
+  text-align: center;
+}
+
+#left-spacing {
+  margin-left: 10px;
 }
